// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rendering and clickable input 1`] = `
<div>
  <div
    class="relative flex h-[40vw] max-h-[40vh] w-[40vw] max-w-[40vh] items-center justify-center"
  >
    <div
      class="absolute z-40 h-full w-full bg-gray-800 opacity-50 hidden"
    />
    <button
      aria-label="inner bull"
      class="absolute z-30 h-[37.5%] w-[37.5%] appearance-none rounded-full bg-gradient-radial from-gray-800 to-gray-500 text-white hover:from-gray-800 hover:to-gray-600"
    />
    <button
      aria-label="outer bull"
      class="absolute z-20 h-[75%] w-[75%] appearance-none rounded-full bg-gradient-radial from-red-600 to-red-400 hover:from-red-700 hover:to-red-500"
    />
    <button
      aria-label="non bull"
      class="absolute z-10 h-full w-full appearance-none bg-gradient-radial from-gray-600 to-gray-500 hover:from-gray-700 hover:to-gray-600"
    />
    <div
      class="pointer-events-none absolute z-50 h-full w-full opacity-30"
      style="background-image: url(./noise.svg);"
    />
  </div>
</div>
`;

exports[`should rendering and disable input 1`] = `
<div>
  <div
    class="relative flex h-[40vw] max-h-[40vh] w-[40vw] max-w-[40vh] items-center justify-center"
  >
    <div
      class="absolute z-40 h-full w-full bg-gray-800 opacity-50 "
    />
    <button
      aria-label="inner bull"
      class="absolute z-30 h-[37.5%] w-[37.5%] appearance-none rounded-full bg-gradient-radial from-gray-800 to-gray-500 text-white hover:from-gray-800 hover:to-gray-600"
      disabled=""
    />
    <button
      aria-label="outer bull"
      class="absolute z-20 h-[75%] w-[75%] appearance-none rounded-full bg-gradient-radial from-red-600 to-red-400 hover:from-red-700 hover:to-red-500"
      disabled=""
    />
    <button
      aria-label="non bull"
      class="absolute z-10 h-full w-full appearance-none bg-gradient-radial from-gray-600 to-gray-500 hover:from-gray-700 hover:to-gray-600"
      disabled=""
    />
    <div
      class="pointer-events-none absolute z-50 h-full w-full opacity-30"
      style="background-image: url(./noise.svg);"
    />
  </div>
</div>
`;
